--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -40,16 +40,38 @@ AM_CPPFLAGS+=-DNDEBUG
 endif
 LDADD=
 
+
 if USE_STANDARD
 AM_CPPFLAGS+=-DUSE_STANDARD_CONTAINERS
-else
+endif
+
+if BHASH_PRESENT
+AM_CPPFLAGS+=-DHAVE_BOOST_HASH
+endif
+
 if BVEC_PRESENT
+AM_CPPFLAGS+=-DHAVE_BOOST_VECTOR
+endif
+
 if BLIST_PRESENT
-#On some systems (or at least recent boost versions, the boost_system is needed to use the boost containers
-LDADD+=-lboost_system
+AM_CPPFLAGS+=-DHAVE_BOOST_LIST
 endif
+
+if BPOOL_ALLOC_PRESENT
+AM_CPPFLAGS+=-DHAVE_BOOST_POOL_ALLOC
 endif
-else
-#Boost is missing, so we gotta use the standard headers
-AM_CPPFLAGS+=-DUSE_STANDARD_CONTAINERS
+
+if BUO_SET_PRESENT
+AM_CPPFLAGS+=-DHAVE_BOOST_UNORDERED_SET
 endif
+# else
+# if BVEC_PRESENT
+# if BLIST_PRESENT
+# #On some systems (or at least recent boost versions, the boost_system is needed to use the boost containers
+# LDADD+=-lboost_system
+# endif
+# endif
+# else
+# #Boost is missing, so we gotta use the standard headers
+# AM_CPPFLAGS+=-DUSE_STANDARD_CONTAINERS
+# endif
