--- a/config-h.in.in
+++ b/config-h.in.in
@@ -1,10 +1,16 @@
 /* config-h.in.in.  Generated from configure.ac by autoheader.  */
 
+/* Define if boost/container/vector.hpp exists */
+#undef HAVE_BOOST_VECTOR
+
 /* define if the compiler supports basic C++11 syntax */
 #undef HAVE_CXX11
 
 /* Define to 1 if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
+
+/* Define to 1 if you have the `boost_system' library (-lboost_system). */
+#undef HAVE_LIBBOOST_SYSTEM
 
 /* Define to 1 if you have the `gsl' library (-lgsl). */
 #undef HAVE_LIBGSL
