--- a/devtools/skeleton/configure.ac
+++ b/devtools/skeleton/configure.ac
@@ -3,7 +3,7 @@ AC_PREREQ(2.59)
 AC_INIT([FWDPPPACKAGE],[0.1.0],[FWDPPPROJECTURL])
 AC_CONFIG_SRCDIR([src/FWDPPPACKAGE.cc])
 AM_INIT_AUTOMAKE
-AC_CONFIG_HEADERS([config-h.in])
+AC_CONFIG_HEADERS([config.h])
 
 AC_CONFIG_MACRO_DIR([m4])
 
