--- a/devtools/skeleton/config.h.in
+++ b/devtools/skeleton/config.h.in
@@ -1,7 +1,25 @@
 /* config.h.in.  Generated from configure.ac by autoheader.  */
 
+/* Define if boost/functional/hash.hpp exists */
+#undef HAVE_BOOST_HASH
+
+/* Define if boost/container/list.hpp exists */
+#undef HAVE_BOOST_LIST
+
+/* Define if boost/pool/pool_alloc.hpp exists */
+#undef HAVE_BOOST_POOL_ALLOC
+
+/* Define if boost/unordered_set.hpp exists */
+#undef HAVE_BOOST_UNORDERED_SET
+
+/* Define if boost/container/vector.hpp exists */
+#undef HAVE_BOOST_VECTOR
+
 /* Define to 1 if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
+
+/* Define to 1 if you have the `boost_system' library (-lboost_system). */
+#undef HAVE_LIBBOOST_SYSTEM
 
 /* Define to 1 if you have the `gsl' library (-lgsl). */
 #undef HAVE_LIBGSL
@@ -59,6 +77,9 @@
 
 /* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
+
+/* Prefer containers from namespace std when compiling */
+#undef USE_STANDARD_CONTAINERS
 
 /* Define to empty if `const' does not conform to ANSI C. */
 #undef const
