test for move semantics with mutations

--- a/unit/Makefile.am
+++ b/unit/Makefile.am
@@ -2,11 +2,13 @@ if BUNIT_TEST_PRESENT
 
 check_PROGRAMS=mutateTest \
 	crossoverTest \
-	gameteTest
+	gameteTest \
+	mutationTest
 
 mutateTest_SOURCES=mutateTest.cc 
 crossoverTest_SOURCES=crossoverTest.cc
 gameteTest_SOURCES=gameteTest.cc
+mutationTest_SOURCES=mutationTest.cc
 
 AM_CXXFLAGS=
 
