--- a/unit/Makefile.in
+++ b/unit/Makefile.in
@@ -77,7 +77,8 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 @BUNIT_TEST_PRESENT_TRUE@check_PROGRAMS = mutateTest$(EXEEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	crossoverTest$(EXEEXT) \
-@BUNIT_TEST_PRESENT_TRUE@	gameteTest$(EXEEXT)
+@BUNIT_TEST_PRESENT_TRUE@	gameteTest$(EXEEXT) \
+@BUNIT_TEST_PRESENT_TRUE@	mutationTest$(EXEEXT)
 @BUNIT_TEST_PRESENT_TRUE@am__append_1 = $(AM_LIBS)
 subdir = unit
 DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/Makefile.am \
@@ -104,6 +105,11 @@ am__mutateTest_SOURCES_DIST = mutateTest.cc
 @BUNIT_TEST_PRESENT_TRUE@am_mutateTest_OBJECTS = mutateTest.$(OBJEXT)
 mutateTest_OBJECTS = $(am_mutateTest_OBJECTS)
 mutateTest_LDADD = $(LDADD)
+am__mutationTest_SOURCES_DIST = mutationTest.cc
+@BUNIT_TEST_PRESENT_TRUE@am_mutationTest_OBJECTS =  \
+@BUNIT_TEST_PRESENT_TRUE@	mutationTest.$(OBJEXT)
+mutationTest_OBJECTS = $(am_mutationTest_OBJECTS)
+mutationTest_LDADD = $(LDADD)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
 am__v_P_0 = false
@@ -134,9 +140,10 @@ am__v_CXXLD_ = $(am__v_CXXLD_@AM_DEFAULT_V@)
 am__v_CXXLD_0 = @echo "  CXXLD   " $@;
 am__v_CXXLD_1 = 
 SOURCES = $(crossoverTest_SOURCES) $(gameteTest_SOURCES) \
-	$(mutateTest_SOURCES)
+	$(mutateTest_SOURCES) $(mutationTest_SOURCES)
 DIST_SOURCES = $(am__crossoverTest_SOURCES_DIST) \
-	$(am__gameteTest_SOURCES_DIST) $(am__mutateTest_SOURCES_DIST)
+	$(am__gameteTest_SOURCES_DIST) $(am__mutateTest_SOURCES_DIST) \
+	$(am__mutationTest_SOURCES_DIST)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -258,6 +265,7 @@ top_srcdir = @top_srcdir@
 @BUNIT_TEST_PRESENT_TRUE@mutateTest_SOURCES = mutateTest.cc 
 @BUNIT_TEST_PRESENT_TRUE@crossoverTest_SOURCES = crossoverTest.cc
 @BUNIT_TEST_PRESENT_TRUE@gameteTest_SOURCES = gameteTest.cc
+@BUNIT_TEST_PRESENT_TRUE@mutationTest_SOURCES = mutationTest.cc
 @BUNIT_TEST_PRESENT_TRUE@AM_CXXFLAGS = 
 @BUNIT_TEST_PRESENT_TRUE@AM_LIBS = -lboost_unit_test_framework
 all: all-am
@@ -310,6 +318,10 @@ mutateTest$(EXEEXT): $(mutateTest_OBJECTS) $(mutateTest_DEPENDENCIES) $(EXTRA_mu
 	@rm -f mutateTest$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(mutateTest_OBJECTS) $(mutateTest_LDADD) $(LIBS)
 
+mutationTest$(EXEEXT): $(mutationTest_OBJECTS) $(mutationTest_DEPENDENCIES) $(EXTRA_mutationTest_DEPENDENCIES) 
+	@rm -f mutationTest$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(mutationTest_OBJECTS) $(mutationTest_LDADD) $(LIBS)
+
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
 
@@ -319,6 +331,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/crossoverTest.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gameteTest.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mutateTest.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mutationTest.Po@am__quote@
 
 .cc.o:
 @am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXXCOMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
