--- a/fwdpp/internal/Makefile.in
+++ b/fwdpp/internal/Makefile.in
@@ -252,7 +252,8 @@ top_srcdir = @top_srcdir@
 pkginclude_HEADERS = mutation_internal.hpp \
 	rec_gamete_updater.hpp \
 	recombination_common.hpp \
-	gsl_discrete.hpp
+	gsl_discrete.hpp \
+	multilocus_rec.hpp
 
 all: all-am
 
